Bug 247408 - Fix internal build after rdar://100429656
Summary: Fix internal build after rdar://100429656
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKit API (show other bugs)
Version: WebKit Local Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Alex Christensen
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2022-11-02 22:34 PDT by Alex Christensen
Modified: 2022-11-02 22:39 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alex Christensen 2022-11-02 22:34:53 PDT
It broke the build.  This fixes it.
Comment 1 Radar WebKit Bug Importer 2022-11-02 22:35:13 PDT
<rdar://problem/101896139>
Comment 2 Alex Christensen 2022-11-02 22:35:59 PDT
Pull request: https://github.com/WebKit/WebKit/pull/6076
Comment 3 EWS 2022-11-02 22:39:19 PDT
Committed 256268@main (7d2fef3d21c8): <https://commits.webkit.org/256268@main>

Reviewed commits have been landed. Closing PR #6076 and removing active labels.