Fix internal build after rdar://100429656 https://bugs.webkit.org/show_bug.cgi?id=247408 rdar://101896139

Unreviewed.

* Source/WebKit/UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView _loadServiceWorker:completionHandler:]):
* Source/WebKit/UIProcess/API/Cocoa/WKWebViewPrivate.h:

Canonical link: https://commits.webkit.org/256268@main